--- a/polynap/Resources/Localizations/Welcome.xcstrings
+++ b/polynap/Resources/Localizations/Welcome.xcstrings
@@ -4,16 +4,16 @@
     "continue" : {
       "comment" : "Button text to continue from the welcome screen into the app or next steps",
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bereit!"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Ready!"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Hazırım!"
           }
         },
         "ja" : {
@@ -21,22 +21,28 @@
             "state" : "translated",
             "value" : "さあ、始めよう！"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hazırım!"
+          }
         }
       }
     },
     "firstPageDesc" : {
       "comment" : "Description text of first welcome page",
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Mit deinem Schlaf zu beginnen ist der beste Weg! Indem du auf polyphasischen Schlaf umsteigst, kannst du eine produktivere und energiegeladenere Version von dir freischalten."
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Starting with your sleep is the best way to do it! By switching to polyphasic sleep, you can unlock a more productive and energetic version of yourself."
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Uykudan başlamak bunun için en iyi yol! Çok fazlı uykuya geçerek kendinin daha üretken ve enerjik bir versiyonunu oluşturabilirsin."
           }
         },
         "ja" : {
@@ -44,25 +50,50 @@
             "state" : "translated",
             "value" : "まずは睡眠から始めるのが一番！多相睡眠に切り替えて、もっと生産的でエネルギッシュな自分を解放しよう。"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Uykudan başlamak bunun için en iyi yol! Çok fazlı uykuya geçerek kendinin daha üretken ve enerjik bir versiyonunu oluşturabilirsin."
+          }
         }
       }
     },
     "firstPageImage" : {
-
-    },
-    "firstPageTitle" : {
-      "comment" : "Title text of first welcome page",
       "localizations" : {
-        "en" : {
+        "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Since you’re here, it’s clear you want to take control of your life."
+            "value" : "firstPageImage"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "firstPageImage"
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Burada olduğuna göre hayatını yoluna koymak istiyorsun."
+            "value" : "firstPageImage"
+          }
+        }
+      }
+    },
+    "firstPageTitle" : {
+      "comment" : "Title text of first welcome page",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Da du hier bist, ist klar, dass du die Kontrolle über dein Leben übernehmen willst."
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Since you’re here, it’s clear you want to take control of your life."
           }
         },
         "ja" : {
@@ -70,22 +101,28 @@
             "state" : "translated",
             "value" : "ここに来たってことは、自分の人生を本気で変えたいってことだね。"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Burada olduğuna göre hayatını yoluna koymak istiyorsun."
+          }
         }
       }
     },
     "fourthPageDesc" : {
       "comment" : "Description text of fourth welcome page",
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Du kannst beginnen, indem du dich registrierst oder anmeldest, falls du bereits ein Konto hast!"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "You can start by signing up or logging in if you already have an account!"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Kaydolarak veya hesabın varsa giriş yaparak başlayabilirsin!"
           }
         },
         "ja" : {
@@ -93,25 +130,50 @@
             "state" : "translated",
             "value" : "まずは新規登録するか、アカウントがあればログインして始めよう！"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Kaydolarak veya hesabın varsa giriş yaparak başlayabilirsin!"
+          }
         }
       }
     },
     "fourthPageImage" : {
-
-    },
-    "fourthPageTitle" : {
-      "comment" : "Title text of fourth welcome page",
       "localizations" : {
-        "en" : {
+        "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Ready for a change?"
+            "value" : "fourthPageImage"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "fourthPageImage"
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Değişikliğe hazır mısın?"
+            "value" : "fourthPageImage"
+          }
+        }
+      }
+    },
+    "fourthPageTitle" : {
+      "comment" : "Title text of fourth welcome page",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Bereit für eine Veränderung?"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ready for a change?"
           }
         },
         "ja" : {
@@ -119,22 +181,28 @@
             "state" : "translated",
             "value" : "変わる準備はできた？"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Değişikliğe hazır mısın?"
+          }
         }
       }
     },
     "secondPageDesc" : {
       "comment" : "Description text of second welcome page",
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ich weiß, es klingt nach viel... Aber das kannst du mit PolyNap ändern"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "I know, it sounds like a lot... But you can change that with PolyNap"
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Biliyorum, biraz fazla… Ama bunu PolyNap ile değiştirebilirsin."
           }
         },
         "ja" : {
@@ -142,25 +210,50 @@
             "state" : "translated",
             "value" : "すごく長く聞こえるよね…でも、PolyNapがあればそれを変えられるんだ。"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Biliyorum, biraz fazla… Ama bunu PolyNap ile değiştirebilirsin."
+          }
         }
       }
     },
     "secondPageImage" : {
-
-    },
-    "secondPageTitle" : {
-      "comment" : "Title text of second welcome page",
       "localizations" : {
-        "en" : {
+        "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Did you know that an average of 27 years, or 1/3 of your life, is spent sleeping?"
+            "value" : "secondPageImage"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "secondPageImage"
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Hayatının ortalama 27 yılının, yani 1/3’ünün uykuda geçtiğini biliyor muydun?"
+            "value" : "secondPageImage"
+          }
+        }
+      }
+    },
+    "secondPageTitle" : {
+      "comment" : "Title text of second welcome page",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Wusstest du, dass du durchschnittlich 27 Jahre, also 1/3 deines Lebens, mit Schlafen verbringst?"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Did you know that an average of 27 years, or 1/3 of your life, is spent sleeping?"
           }
         },
         "ja" : {
@@ -168,22 +261,28 @@
             "state" : "translated",
             "value" : "人生の3分の1にあたる平均27年間を、睡眠に費やしているって知ってた？"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hayatının ortalama 27 yılının, yani 1/3’ünün uykuda geçtiğini biliyor muydun?"
+          }
         }
       }
     },
     "thirdPageDesc" : {
       "comment" : "Description text of third welcome page",
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Polyphasischer Schlaf teilt deine Ruhe in effiziente Zyklen auf und gibt deinem Gehirn die Energie, die es wirklich braucht."
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Polyphasic sleep divides your rest into efficient cycles, giving your brain the energy it truly needs."
-          }
-        },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Polifazik uyku, uykunu verimli döngülere bölerek beyninin ihtiyacı olan enerjiyi sağlar."
           }
         },
         "ja" : {
@@ -191,25 +290,50 @@
             "state" : "translated",
             "value" : "多相睡眠は、休息を効率的なサイクルに分割して、脳が本当に必要とするエネルギーを与えてくれるんだ。"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Polifazik uyku, uykunu verimli döngülere bölerek beyninin ihtiyacı olan enerjiyi sağlar."
+          }
         }
       }
     },
     "thirdPageImage" : {
-
-    },
-    "thirdPageTitle" : {
-      "comment" : "Title text of third welcome page",
       "localizations" : {
-        "en" : {
+        "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Wouldn’t you love to wake up feeling more energized in less time?"
+            "value" : "thirdPageImage"
+          }
+        },
+        "ja" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "thirdPageImage"
           }
         },
         "tr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Daha az uyuyup daha enerjik uyanmayı istemez misin?"
+            "value" : "thirdPageImage"
+          }
+        }
+      }
+    },
+    "thirdPageTitle" : {
+      "comment" : "Title text of third welcome page",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Würdest du nicht gerne in kürzerer Zeit energiegeladener aufwachen?"
+          }
+        },
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Wouldn’t you love to wake up feeling more energized in less time?"
           }
         },
         "ja" : {
@@ -217,28 +341,40 @@
             "state" : "translated",
             "value" : "もっと短い時間で、もっと元気に目覚められたら最高じゃない？"
           }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Daha az uyuyup daha enerjik uyanmayı istemez misin?"
+          }
         }
       }
     },
     "welcomeTitle" : {
       "comment" : "Title in the top bar (PolyNap’e Hoşgeldin!)",
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Willkommen bei PolyNap!"
+          }
+        },
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Welcome to PolyNap!"
           }
         },
-        "tr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "PolyNap’e Hoşgeldin!"
-          }
-        },
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "PolyNapへようこそ！"
+          }
+        },
+        "tr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "PolyNap’e Hoşgeldin!"
           }
         }
       }
